# CanteraMFR

./: CMakeLists.txt  LICENSE  README.md
examples/EMC/: Result_EDYN.csv  Tw.inp  chem.yaml  inputs.yaml  memo.txt
examples/ammonia/: Result_EDYN.csv  Tw.inp  memo.txt
examples/ammonia2017/: chem.yaml  inputs.yaml
examples/ammonia2024/: Result_1400K_EDYN.csv  Tw_1400K.inp  chem.yaml  inputs.yaml  memo.txt
examples/ethanol/: Result_EDYN.csv  Tw.inp  chem.yaml  inputs.yaml  memo.txt
examples/n-heptane/: Result_EDYN.csv  chem.yaml  inputs.yaml  memo.txt
source/: main.cpp  mfr.cpp  mfr.hpp
